# keycard-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: apdu.rs  channel.rs  constants.rs  error.rs  keycard.rs  lib.rs  metadata.rs  pcsc.rs  tlv.rs
src/parsing/: application_info.rs  application_status.rs  bip32.rs  certificate.rs  ethereum.rs  key_path.rs  mnemonic.rs  mod.rs  signature.rs
src/secure_channel/: mod.rs  pairing.rs  v1.rs  v2.rs
tests/: integration.rs
